--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header{
 	background: #000;
 	display: flex;
 }
+
 .header__logo{
 	text-transform: uppercase;
 	color: #fff;
@@ -29,10 +30,12 @@ header{
 	margin-top: 56px;
 	margin-left: 12%;
 }
+
 nav{
 	margin-top: 56px;
 	margin-left: 29%;
 }
+
 .topnav a{
 	color: #fff;
 	text-align: center;
@@ -40,9 +43,11 @@ nav{
 	font-size: 14px;
 	font-weight: bold;
 }
+
 .topnav a:hover{
 	border-bottom: 3px solid #fcac45;
 }
+
 .topnav .icon{
 	display: none;
 }
@@ -58,37 +63,46 @@ main .main__welcome{
 	text-align: center;
 	padding: 200px 0 410px 0;
 }
+
 main .main__welcome p{
 	color: #999999;
 	font-size: 20px;
 }
+
 main .main__welcome h1{
 	color: #999999;
 	font-size: 44px;
 }
+
 .main__welcome h1:after{
 	display: none;
 }
+
 .mycompany{
 	color: #fcac45;
 }
+
 .wrapper{
 	width: 76%;
 	margin: 0 auto;
 }
+
 main .main__about{
 	display: flex;
 	padding: 100px 0 100px 0;
 }
+
 .about__right{
 	margin-left: 175px;
 }
+
 .about__right h1{
 	display: inline-block;
 	border-bottom: 3px solid #fcac45;
 	padding-bottom: 20px;
 	font-size: 28px;	
 }
+
 .about__right h1:after{
 display: none;
 }
@@ -98,17 +112,17 @@ display: none;
 	color: #6c6c6c;
 
 }
+
 .about__right li{
 	background: url(img/mark.png) 0px no-repeat;
 	padding-left: 25px;
 	margin-top: 10px;
 	color: #5a5a5a;
 }
+
 .mw-100{
 	min-width: 100%;
 }
-
-/*Редактирование 2 блока с текстом*/
 
 .main__team{
 	background: #000;
@@ -116,18 +130,12 @@ display: none;
 	padding: 100px 0 165px 0;
 	color: #fff;
 }
+
 .main__team h1{
 	font-size: 44px;
 	padding-bottom: 30px;
 }
-/*.line{
-	width:100px;
-	height: 3px;
-	background: #fcac45;
-	position: relative;
-	left: 45.5%;
-	margin-bottom: 85px;
-}*/ /*Линия под h1*/
+
 .photo{
 	background: #d7d7d7;
 	width: 125px;
@@ -135,6 +143,7 @@ display: none;
 	border-radius: 50%;
 	margin: 20px auto;
 }
+
 .team__cards{
 	display: flex;
 }
@@ -142,14 +151,17 @@ display: none;
 .card{
 	margin: 0 40px;
 }
+
 .name{
 	font-size: 20px;
 	margin-bottom: 7px;
 }
+
 .position{
 	font-size: 16px;
 	margin-bottom: 35px;
 }
+
 .about__position{
 	font-size: 14px;
 }
@@ -165,6 +177,7 @@ display: none;
 	text-align: center;
 	padding: 100px 0 30px 0;
 }
+
 .main__services p{
 	color: #6c6c6c;
 	margin-bottom: 100px;
@@ -222,64 +235,59 @@ display: none;
 .main__work img:hover{
 	opacity: 0.9;
 }
-/*При наведении на img тень падает*/
+/*hover shadow*/
+
 
 .contact__from{
 	padding: 100px 0 100px 0;
 }
 
 .contact__from h1, p{
-text-align: center;
+	text-align: center;
 }
 
 
 .contact__wrapper{
-	width: 753px;
 	margin: 0 auto;
 	color: #636363;
 }
-.red{
-	color: red;
-}
+
 .contact__from h1{
 	color: #000;
 	margin-bottom: 30px;
+	font-size: 34px;
 }
 
-form p{
-	text-align: left;
-
-}
 
 .form__inputs{
 	margin-top: 100px;
-	display: flex;
+	text-align: center;
 }
 
 input{
-	width: 360px;
+	width: 34%;
 	height: 40px;
 	font-size: 20px;
 	margin-bottom: 30px;
+	font-weight: 300;
+	line-height: 22px;
+	border: 1px solid #999999;
 }
 
 input:first-of-type{
-	margin-right: 23px;
+	margin-right: 1%;
 }
 
 textarea{
-width: 100%;
-height: 163px;
-}
-
-textarea{
-border: 1px solid #999999;
-margin-top: 5px;
-}
-
-.button__block{
-	display: flex;
-	justify-content: flex-end;
+	width: 70%;
+	height: 163px;
+	border: 1px solid #999999;
+	margin-top: 5px;
+	resize: vertical;
+	font-size: 20px;
+	margin-bottom: 30px;
+	font-weight: 300;
+	line-height: 22px;
 }
 
 input[type=submit]{
@@ -289,6 +297,7 @@ input[type=submit]{
 	color: #fff
 	margin-right: 0;
 	margin-top: 20px;
+	text-align: center;
 }
 
 h1:after{
@@ -321,95 +330,139 @@ footer{
 }
 
 
+@media screen and (max-width: 1363px){
+
+.line1 img:last-child{
+	display: none;
+}
+.line2 img:last-child{
+	display: none;
+}
+.line3 img:last-child{
+	display: none;
+}
+}
+
+
+@media screen and (max-width: 1040px){
+
+.line1 img:nth-child(3){
+	display: none;
+}
+.line2 img:nth-child(3){
+	display: none;
+}
+.line3 img:nth-child(3){
+	display: none;
+}
+}
+
+
+
+
 
 @media screen and (max-width: 1200px){
-	nav{
-		margin-left: 20%;
-	}
+
+nav{
+	margin-left: 20%;
+}
 }
 
 @media screen and (max-width: 1105px){
-	nav{
-		margin-left: 10%;
-	}
+
+nav{
+	margin-left: 10%;
+}
 }
 
 @media screen and (max-width: 1010px){
-	.topnav a{
-		display: none;
-	}
-	.topnav a.icon{
-		float: right;
-		margin-top: -17px;
-		display: block;
-		color: #fff;
-		font-size: 25px;
-	}
-	nav{
-		width: 100%;
-	}
-	.topnav.responsive{
-		position: relative;
-		top: 50px;
-		left: -200px;
-	}
-	header .topnav.responsive{
-		height: 340px;
-	}
-	.topnav.responsive a.icon{
-		position: absolute;
-		top: -50px;
-		right: -200px;
-	}
-	.topnav.responsive a{
-		float: none;
-		display: block;
-		text-align: left;
-	}
+
+.topnav a{
+	display: none;
+}
+
+.topnav a.icon{
+	float: right;
+	margin-top: -17px;
+	display: block;
+	color: #fff;
+	font-size: 25px;
+}
+
+nav{
+	width: 100%;
+}
+	
+.topnav.responsive{
+	position: relative;
+	top: 50px;
+	left: -200px;
+}
+
+header .topnav.responsive{
+	height: 340px;
+}
+	
+.topnav.responsive a.icon{
+	position: absolute;
+	top: -50px;
+	right: -200px;
+}
+
+.topnav.responsive a{
+	float: none;
+	display: block;
+	text-align: left;
+	margin-left: 40px;
+}
 
 
 
 
 
-	main .main__welcome{
-		padding: 50px 0 50px 0;
-	}
-	main .main__welcome p{
-		font-size: 14px;
-	}
-	main .main__welcome h1{
-		font-size: 25px;
-	}
+main .main__welcome{
+	padding: 50px 0 50px 0;
+}
 
-	.mw-100{
-		max-width: 100%;
-	}
+main .main__welcome p{
+	font-size: 14px;
+}
 
-	.main__about{
-		flex-direction: column;
-	}
-	.about__right{
-		text-align: center;
-		margin-left: 0;
-	}
-	.about__right li{
-		text-align: left;
-	}
-	.about__right h1{
-		margin-top: 10px;
-		font-size: 20px;
-	}
+main .main__welcome h1{
+	font-size: 25px;
+}
 
+.mw-100{
+	max-width: 100%;
+}
 
+.main__about{
+	flex-direction: column;
+}
 
+.about__right{
+	text-align: center;
+	margin-left: 0;
+}
 
-	.team__cards{
+.about__right li{
+	text-align: left;
+}
+
+.about__right h1{
+	margin-top: 10px;
+	font-size: 20px;
+}
+
+.team__cards{
 	flex-direction: column;
 }
 
 .services__cards{
 	grid-template-columns: auto;
 }
+
+
 
 .line1 img:not(:first-child){
 	display: none;
@@ -420,5 +473,26 @@ footer{
 .line3 img:not(:first-child){
 	display: none;
 }
+}
 
+
+@media screen and (max-width: 769px){
+
+.contact__from h1{
+	font-size: 28px;
+}
+
+input{
+	width: 50%;
+	height: 30px;
+}
+
+textarea{
+	width: 50%;
+}
+
+input[type=submit]{
+	width: 125px;
+	height: 30px;
+}
 }
